# PromptEditor

./: .clang-tidy  AGENTS.md  CMakeLists.txt  CMakePresets.json  CONTRIBUTING.md  C_PROJECT_STANDARD.md  README.md  README.zh.md  SECURITY.md
.github/workflows/: ci.yml  release.yml
cmake/: CompilerOptions.cmake  Packaging.cmake  PromptEditorConfig.cmake.in  PromptLibConfig.cmake.in  Sources.cmake  Tests.cmake  prompteditor_version.h.in  promptlib_version.h.in
doc/: README.md  SRS.md  SRS.zh.md  mvp.md  storage-format.md
doc/adr/: 0001-c11-cmake-toolchain-policy.md
doc/guides/: cmake.md  environment.md  release.md  template.md
docs/: README.md  SRS.md  SRS.zh.md  mvp.md  storage-format.md
docs/adr/: 0001-c11-cmake-toolchain-policy.md
docs/guides/: cmake.md  release.md
docs/zh-CN/: README.md  build.md
include/prompteditor/: cli.h  compiler.h  example.h  export.h
include/promptlib/: compiler.h  example.h  export.h
scripts/: check.ps1  install.ps1  install.sh  installer.iss  package.ps1  package.sh  release.ps1  release.sh  rename-project.ps1  rename-project.sh
src/: cli.c  main.c
src/prompteditor/: example.c
src/promptlib/: example.c
tests/: test_example.c
tests/package_smoke/: CMakeLists.txt  cxx_header_smoke.cpp  main.c
tests/subproject_smoke/: CMakeLists.txt  main.c
tests/support/: test_assert.h
